--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
     kapt {
         correctErrorTypes true
     }
+    testOptions {
+        unitTests.returnDefaultValues true
+    }
 }
 
 dependencies {
