--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,6 @@ android {
     kapt {
         correctErrorTypes true
     }
-    testOptions {
-        unitTests.returnDefaultValues true
-    }
 }
 
 dependencies {
@@ -55,17 +52,17 @@ dependencies {
     //RX
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-    implementation "androidx.fragment:fragment:1.4.1"
+    implementation "androidx.fragment:fragment:1.5.0"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
-    //coil
+    //Coil
     implementation "io.coil-kt:coil:2.1.0"
 
-    //mockito
+    //Mockito
     testImplementation 'org.mockito:mockito-core:4.5.1'
     testImplementation 'org.mockito:mockito-inline:3.7.7'
     testImplementation 'com.nhaarman:mockito-kotlin:1.5.0'
